# storage/api-docs/api-docs.json
@@ -54,17 +54,26 @@
                 ],
                 "description": "Get file with keyword",
                 "operationId": "file_show",
-                "parameters": [
-                    {
-                        "name": "keyword",
-                        "in": "path",
-                        "description": "Keyword of subject",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "text"
+                                ],
+                                "properties": {
+                                    "text": {
+                                        "type": "integer",
+                                        "format": "number",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -89,8 +98,8 @@
                 }
             }
         },
-        "/api/app/search/{text}": {
-            "get": {
+        "/api/app/file-search/": {
+            "post": {
                 "tags": [
                     "File"
                 ],
